# kompressor

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: crc32c.h  kompressor.h
snappy/: CMakeLists.txt
src/: crc32c.c  kompressor.c
